2006-07-17  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * setup.py: some tweaks
    * olive-gtk: added main executable
    * olive/frontend/gtk/handler.py: signal handler class added (OliveHandler)
    * olive/frontend/gtk/__init__.py: main GTK class added (OliveGtk)
    * olive.glade: GTK UI description added (generated by Glade)
    * oliveicon2.png: icon added

2006-07-16  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/backend/ui.py: GtkUIFactory implementation
    * Done some directory reorganization.
    * setup.py: added some basic install script
    * Began to implement the GTK UI.

2006-07-08  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * backend/errors.py: added some exceptions related to diff() and log()
    * backend/info.py: implemented log()
    * backend/info.py: diff() works well with revnos
    * added e-mail address to copyright header

2006-07-07  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * I turned 20 today, so please forgive me for the short changelog :)

2006-07-06  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * I'm not dead :)
    * backend/errors.py: added some exceptions related to fileops.move()
    * backend/fileops.py: implemented move()
    * backend/info_helper.py: added diff_helper()
    * backend/info.py: implemented diff()

2006-06-20  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * backend/init.py: moved pull() to backend/update.py
    * backend/update.py: implemented update() and missing()

2006-06-19  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * backend/errors.py: renamed NoPushLocationKnown to NoLocationKnown
    * backend/init.py: implemented pull()

2006-06-18  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * backend/info.py: implemented version(), whoami() and info()
    * backend/info_helper.py: some helper functions for info.info()

2006-06-13  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>
