@@ -1,0 +1,4 @@
+TODO list for Olive
+-------------------
+
+ - Be able to install into other locations than /usr (LarstiQ)
